# radon_project

./: .gitignore  .pre-commit-config.yaml  main.py  manage.py  pyproject.toml  pytest.ini
.github/: dependabot.yml
.github/workflows/: ci.yml
config/: settings.py  urls.py
config/settings/: base.py  local.py  production.py
data/: 1 - ELENCO EDIFICI Agg_05092025.xlsx  data-1764149181201.csv  lookup.csv  lookup_geologia.py
static/css/: custom_admin.css
territorio/: admin.py  apps.py  models.py
territorio/migrations/: 0001_initial.py
users/: admin.py  models.py
users/migrations/: 0001_initial.py  0002_alter_customuser_gender.py
users/tests/: test_models.py
