[project]
name = "radon-monitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.8",
    "django-admin-honeypot-updated-2021>=1.2.0",
    "django-environ>=0.12.0",
    "django-filter>=25.2",
    "djangorestframework>=3.16.1",
    "gdal ; sys_platform == 'win32'",
    "markdown>=3.10",
    "psycopg>=3.2.13",
    "waitress>=3.0.2",
    "whitenoise>=6.11.0",
]

[dependency-groups]
dev = [
    "colorlog>=6.10.1",
    "pip-audit>=2.9.0",
    "pre-commit>=4.5.0",
    "pytest>=9.0.1",
    "pytest-django>=4.11.1",
    "ruff>=0.14.6",
]

[tool.ruff]
# Escludi cartelle comuni
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "migrations", # Ignora le migrazioni generate da Django
]

line-length = 130 # Django spesso richiede righe un po' più lunghe di 88
indent-width = 4
target-version = "py312" # Adatta alla tua versione python

[tool.ruff.lint]
# Abilita regole: E (errori pycodestyle), F (Pyflakes), I (isort), N (nomi variabili)
select = ["E", "F", "I", "N"]
ignore = []

# Permetti fix automatici per tutte le regole abilitate
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# Ignora "Star imports" e "Undefined names" nei file di configurazione Django
"config/settings/*.py" = ["F403", "F405"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.uv.sources]
gdal = { path = "gdal-3.11.4-cp312-cp312-win_amd64.whl", marker = "sys_platform == 'win32'" }
